--- a/amcweb/static/amcweb/css/style.css
+++ b/amcweb/static/amcweb/css/style.css
@@ -164,7 +164,7 @@ ul.forms_right li {
 
 .top_menu_Sodhis {
 	padding: 0.5em 0em;
-	background: #319f29;
+	background: #0d790d;
 }
 
 .content {
@@ -283,20 +283,20 @@ ul.forms_right li {
 }
 
 .navbar-nav>li>a.active {
-	color: #319f29;
+	color: #0d790d;
 	background: none;
 }
 
 .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:focus {
-	color: #319f29;
+	color: #0d790d;
 	background: none;
 }
 
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus {
-	color: #319f29;
+	color: #0d790d;
 	background: none;
 }
 
@@ -346,7 +346,7 @@ ul.forms_right li {
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-	color: #319f29;
+	color: #0d790d;
     background: none;
 }
 
@@ -833,7 +833,7 @@ span.eme {
 }
 .grid1 i.fa {
     font-size: 40px;
-    color: #319f29;
+    color: #0d790d;
 }
 /* //services */
 /*-- /testimonials --*/
@@ -1047,7 +1047,7 @@ a.read-agileits {
     letter-spacing: 2px;
     font-weight: 600;
     font-size: 18px;
-    color: #319f29;
+    color: #0d790d;
 }
 a.read-agileits:hover {
     color: #ff9900;
@@ -1237,7 +1237,7 @@ a.read-agileits:hover {
     box-shadow:0px 1px 1px 1px #ccc;
 }
 .panel-title a {
-    background: #319f29;
+    background: #0d790d;
 	color:#fff;
 	text-decoration: none;
     display: block;
@@ -1391,8 +1391,7 @@ h3.agileits-icons-title {
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-	color: #777;
-} 
+}
 .bs-glyphicons .glyphicon-class {
     display: block;
     text-align: center;
